# rust-koans-python-devs

./: .gitignore  CHANGELOG.md  CHEATSHEET.md  COMO_FUNCIONA.md  CONTRIBUTING.md  Cargo.toml  GUIA.md  LICENSE  MEJORES_PRACTICAS.md  MI_PROGRESO.md  QUICKSTART.md  README.md  SECURITY.md  SOLUCIONES.md  check_progress.ps1  check_progress.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  koan.md
.github/workflows/: ci.yml
01_about_variables/: Cargo.toml
01_about_variables/src/: lib.rs
01_about_variables/tests/: tests.rs
02_about_ownership/: Cargo.toml
02_about_ownership/src/: lib.rs
02_about_ownership/tests/: tests.rs
03_about_structs/: Cargo.toml
03_about_structs/src/: lib.rs
03_about_structs/tests/: tests.rs
04_about_traits/: Cargo.toml
04_about_traits/src/: lib.rs
04_about_traits/tests/: tests.rs
05_about_errors/: Cargo.toml
05_about_errors/src/: lib.rs
05_about_errors/tests/: tests.rs
06_about_collections/: Cargo.toml
06_about_collections/src/: lib.rs
06_about_collections/tests/: tests.rs
07_about_iterators/: Cargo.toml
07_about_iterators/src/: lib.rs
07_about_iterators/tests/: tests.rs
08_about_lifetimes/: Cargo.toml
08_about_lifetimes/src/: lib.rs
08_about_lifetimes/tests/: tests.rs
09_about_concurrency/: Cargo.toml
09_about_concurrency/src/: lib.rs
09_about_concurrency/tests/: tests.rs
10_about_modules/: Cargo.toml
10_about_modules/src/: lib.rs
10_about_modules/tests/: tests.rs
